2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: fix the signature of Date.set_time_val

2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: publish GObject's notify method

2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gtksourceview-2.0.deps: express dependency on GTK+
	* vapi/gtksourceview-2.0.vala: remove internal classes,
	fix header file annoations
	* vapi/Makefile.am: install gtksourceview bindings

2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: MatchInfo.fetch_named transfers ownership

2007-08-08  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valacodegenerator.vala,
	  tests/test-033.out, tests/test-033.vala: support exceptions in foreach
	  collection expressions, fix test

2007-08-07  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* tests/test-033.vala, tests/testrunner.sh: test exception handling when
	iterating over Gee collections - currently results in segmentation fault

2007-08-07  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am, vapi/hildon-1.deps, vapi/hildon-1.vala,
	  vapi/packages/hildon-1, vapigen/valagidlparser.vala: add Hildon
	  bindings, patch by Marcelo Lira, fixes bug 463598

2007-08-07  Jürg Billeter  <j@bitron.ch>

	* vapigen/gidlgen/gapi2xml.pl: improve class and signal parsing,
	  patch by Marcelo Lira, fixes bug 464388

2007-08-07  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: fix the C name of Process.close_pid
	and the spelling of SpawnFlags.CHILD_INHERITS_STDIN

2007-08-07  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: add Environment.get_prgname and set_prgname

2007-08-07  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/glib-2.0.vala: add IOChannel.unix_new and unix_get_fd

2007-08-07  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: fix Pid handling

2007-08-07  Jürg Billeter  <j@bitron.ch>
