@@ -1,5 +1,10 @@
 2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
 
+	* vapi/gtk+-2.0.vala: fix the signatures of some TreeModel
+	and CellRenderer related methods
+
+2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
+
 	* vapi/glib-2.0.vala: fix the signature of Date.set_time_val
 
 2007-08-08  Mathias Hasselmann  <mathias.hasselmann@gmx.de>
